www/styles/default/classic.css
/* This is a sub-theme. It makes the most visible changes to the base.css file, such as changing colours or the position of certain elements. */


/*  general settings, like colors. */
body {
    color: #0D161F; /*!important;*/
}
    
/* settings/hardware background color*/
.row-fluid [class^="span"]{
    background-color: #555; /*!important;*/
    color:#fff!important;
}


/* hacking around all the parts that don't follow span convention*/
#protectiontable, 
#loghistory table, 
#notifications>table, 
#metercounters table, 
#othersettings table, 
#floorplans table, 
#settingscontent #ActiveTabs,
#emailtable,
#hardwarecontent > div:not(.page-header-small):not(.bannav):not(#bannav), 
#hardwarecontent > table:not(.page-header-small):not(.bannav):not(#bannav),
#hardwarecontent #ipnodeparamstable,
#nodeparamstable,
#utilitycontent #notificationparamstable,
#plancontent #activeparamstable,
#usercontent #userparamstable, #cameracontent #activeparamstable, #hardwarecontent #hardwareparamstable, 
#lightcontent #paramstable:not(:nth-of-type(1)):not(:nth-of-type(2)), 
#scenecontent #paramstable:not(:nth-of-type(1)):not(:nth-of-type(2)), 
#weathercontent #notificationparamstable ,#lightcontent #timerparamstable, 
#tempnotifications #notificationparamstable, #lightcontent #notificationparamstable, 
#scenecontent #timerparamstable,
#notificationtable:not(.dataTable),
#notifications>table, 
#paramstable,#fibaromain #uservariablesedittable,
#customlog, #timerparamstable,
#linkparamstable, #influxremote,
#linkhttpparamstable, #httpremote,
#linkgooglepubsubparamstable, #googlepubsubremote,
#fibaromain #linkparamstable, #fibaromain #fibaroremote,
#userparamstable,#activeparamstable, #lightcontent paramstable, 
#scenecontent #paramstable, 
#notificationparamstable, #hardwareparamstable
{
    background-color: #555!important;
    color:#fff!important;
    border-color: #555!important;
}


/*  logo  */
h2#appversion{
    display:block
}


/*  navigation  */
.navbar{
    background-color:#eee;
}

#beforebannav,
#timesun{
    color:#ddd;
}

#dashcontent h2, 
#settingscontent h1{
    font-size:140%;
    color:#fff;
    padding-bottom:10px;
    margin-top:30px /*!important*/;
    border-bottom:1px solid #fff;
}


.navbar .nav .current_page_item > a, 
.navbar .nav .current_page_item > a:hover{
    color:#fff!important;
}

body table#itemtablesmall tr td:first-child, /* #name */
body table#itemtablesmalldoubleicon tr td:first-child,
body table#itemtablesmalltrippleicon tr td:first-child,
body table#itemtablesmall tr td:first-child,
body table#itemtablenotype tr td:first-child{
    border-top-left-radius: 3px!important;
    border-top-right-radius:3px!important;
}

.sub-tabs-apply{
    position:inherit!important;
}


/* titles */

h1,h2,h3{color:#999}

.row-fluid h1,
.row-fluid h2,
.row-fluid h3 {
    color:#ddd!important;
    border-bottom: 1px dotted #666;
}

/* name */

#name{
    box-shadow: 2px 2px 18px 0px rgba(50, 50, 50, 0.2);
}

#dashcontent #name{
    border-top-left-radius: 3px!important;
    border-top-right-radius: 3px!important;
    box-shadow: 2px 2px 18px 0px rgba(50, 50, 50, 0.2);
}


/* bigtext */

#dashcontent div[class^="span"] #bigtext > span {
    border-radius:3px;
    background-color: #D4E1EE;
}

#dashcontent div[class^="span"] #bigtext > span > span {
    border-radius:3px;
}


/*  icons images */

#img img, 
#img1 img,
#img2 img,    
#img3 img,
#img4 img{
    height:30px;
    box-sizing: border-box;
    cursor: pointer;
    padding:2px;
}

.span4 #img img:hover, 
.span4 #img1 img:hover,
.span4 #img2 img:hover,
.span4 #img3 img:hover,
.span4 #img4 img:hover,
#dashcontent #img img:hover, 
#dashcontent #img1 img:hover,
#dashcontent #img2 img:hover,
#dashcontent #img3 img:hover,
#dashcontent #img4 img:hover{
    background-color:#3d9cca;
    cursor: pointer;
    -webkit-transition: .3s;
    transition: .3s;
    border-radius:3px;
}


/* item status*/

#status{color:#333;}


/* item mini-options-menu*/

.options a.btnsmall{font-size:12px;}

.item .options {
    height: 30px;
    background-color: rgba(0,0,0,0.02);
}

/*  item lastupdate  */

.ui-draggable:not(.ui-dialog) #lastupdate{
    /*color:#ccc;*/
    border-bottom-left-radius: 3px;
    border-bottom-right-radius: 3px;
}


/* item table */

.ui-draggable-dragging > div.item > table,
.ui-draggable-dragging > section > table{
    border-radius:3px;
}

.ui-draggable:not(.ui-dialog) tr{
    background-color:#D4E1EE;
    /*background: -moz-linear-gradient(to bottom, rgba(241,245,250,0.9) 0%, rgba(241,245,250,1) 100%,); 
    background: -webkit-linear-gradient(to bottom, rgba(241,245,250,1) 0% ,rgba(241,245,250,1) 55px, rgba(241,245,250,0.05) 55px, rgba(241,245,250,0.1) 60px,rgba(241,245,250,0.1) 100%);
    background: linear-gradient(to bottom, rgba(241,245,250,1) 0% ,rgba(241,245,250,1) 55px, rgba(241,245,250,0.05) 55px,rgba(241,245,250,0.1) 60px, rgba(241,245,250,0.1) 100%); 
    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#d4e1ee', endColorstr='#cccccccc',GradientType=0 );
    box-shadow: 2px 2px 18px 0px rgba(50, 50, 50, 0.2);*/
}

body:not(.dashboard) .ui-draggable:not(.ui-dialog) tr {   
background: #bdd5ed;
background: -moz-linear-gradient(top, #d4e1ee 0%,#bdd5ed 100%); 
background: -webkit-linear-gradient(top, #d4e1ee 0%,#bdd5ed 100%);
background: linear-gradient(to bottom, #d4e1ee 0%,#bdd5ed 100%);
filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#bdd5ed', endColorstr='#d4e1ee',GradientType=0 );
}

body.frontStage .item table > tbody > tr, /* the new way*/
body .span3  table > tbody > tr,
body .span4  table > tbody > tr{
    border-radius:3px;
}

#dashcontent .ui-draggable tr{
    /*background-image: none!important;*/
    /*background-color: #D4E1EE;*/
   /* box-shadow: 2px 2px 18px 0px rgba(50, 50, 50, 0.3);*/
}

.ui-draggable:not(.ui-dialog) tr td{
    display:block;
}



/* item buttons and widgets  */

#dashcontent div[class^="span"] .selectorlevels {
    width:100%;
    height:30px;
    position:relative;
    left:0!important;
    margin-top:0!important
}

#dashcontent div[class^="span"] .selectorlevels .ui-buttonset .ui-button{height:30px}

#dashcontent div[class^="span"] .selectorlevels .ui-buttonset{
    height:30px;
    display: flex;
    flex-flow: row nowrap;
    align-items: stretch;
    margin-right:0;
}

#dashcontent div[class^="span"] td > div.dimslider{
    left:0;
    top:0;
    width:100%!important;
    /*box-shadow: inset 0 -2px 20px 1px rgba(0, 0, 0, 0.5); /*, 0 1px 5px 5px rgba(250, 250, 250, 0.4)*/
    background: #bbc6d2;
    height:25px;
    border-bottom:1px solid #555;
    border-right: 10px solid #D4E1EE;
    border-left: 10px solid #D4E1EE;
    box-sizing: border-box;
}

#dashcontent div[class^="span"] .dimslider .ui-slider-handle{
    top:-9px;
}

.ui-corner-bottom, .ui-corner-br, .ui-corner-all, .ui-corner-top, .ui-corner-right, .ui-corner-left, .ui-corner-tr{
    border-radius:0!important;
}

.ui-draggable:not(.ui-dialog) tr td:last-of-type a.btnsmall{
    color:#fff;
    background-color:#999;
    margin-top:6px;
    margin-left:0px;
    padding:2px 5px;
    line-height: 1.40em;    
    background-image:none;
    background: -moz-linear-gradient(top, #46b1d9 0%, #3d9bc9 50%, #2e8cbc 51%, #2571ab 100%);
    background: -webkit-linear-gradient(top, #46b1d9 0%,#3d9bc9 50%,#2e8cbc 51%,#2571ab 100%);
    background: linear-gradient(to bottom, #46b1d9 0%,#3d9bc9 50%,#2e8cbc 51%,#2571ab 100%);
    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#46b1d9', endColorstr='#2571ab',GradientType=0 );      
}

.ui-draggable:not(.ui-dialog) tr td:last-of-type a.btnsmall:first-of-type{
    margin-left:5px;
}


#dashcontent .selectorlevels label:not(.ui-state-active){
    background-color: #D4E1EE;
    box-shadow: -2px -1px 20px -1px rgba(50, 50, 50, 0.1)
}

#dashcontent .selectorlevels label:not(.ui-state-active):hover{
    background-color:white;
    color:#333;
}


/*  settings specific */

.relatedIcon{
vertical-align: text-bottom;
}

#dashcontent h2, #settingscontent h1{
    color:#bbb;
    margin-top:30px;
}

.related > .span2,
.related > .span3 {
    text-align: center;
}

#settingscontent .span6 tr{
    border-top: 1px solid #595959;
}

textarea, input, select {
    background-color:#fff;
}



/*  data tables */
table.dataTable thead.ui-state-default{
    background-color: #292929;
    color: #fff;
    border-color: #292929;
}

div.dataTables_wrapper .ui-toolbar, div.dataTables_wrapper .ui-widget-header{
    color: #666;
    background-color: #ccc;
}

.dataTables_wrapper{
    /*border:10px solid #eee;*/
}


/*  mobile  */

body.dashMobile #dashcontent #name,
body.dashMobile #dashcontent #status{box-shadow:none!important;}


/*  status indicators */

div.item.statusNormal td#name{
    background-color: transparent;

}
div.item.statusProtected td#name{
    background-color: transparent;
    -moz-box-shadow:  0 2px 0 0 #A4B1EE;
    -webkit-box-shadow:  0 2px 0 0 #A4B1EE;
    box-shadow:  0 2px 0 0 #A4B1EE;
}
div.item.statusTimeout td#name{
    background-color: transparent;
    -moz-box-shadow:  0 2px 0 0 #DF2D3A;
    -webkit-box-shadow:  0 2px 0 0 #DF2D3A;
    box-shadow:  0 2px 0 0 #DF2D3A;    
}
div.item.statusLowBattery td#name{
    background-color: transparent;
    -moz-box-shadow:  0 2px 0 0 #DDDF2D;
    -webkit-box-shadow:  0 2px 0 0 #DDDF2D;
    box-shadow:  0 2px 0 0 #DDDF2D;  
}


/*  footer  */

#copyright{
    background-color:#222;
}

